--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ transformers~=4.46.1
 torchmetrics~=1.5.2
 jiwer~=3.0.5
 pandas~=2.0.3
-requests~=2.31.0
+requests~=2.32.3
 numpy~=1.24.3
 matplotlib~=3.7.2
 librosa~=0.10.2.post1
 pesq==0.0.4
+datasets==3.2.0
+pystoi
