--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-torch~=2.5.1
-soundfile~=0.12.1
-transformers~=4.46.1
-torchmetrics~=1.5.2
-jiwer~=3.0.5
-pandas~=2.0.3
-requests~=2.32.3
-numpy~=1.24.3
-matplotlib~=3.7.2
-librosa~=0.10.2.post1
+torch==2.5.1
+soundfile==0.12.1
+transformers==4.46.1
+torchmetrics==1.5.2
+jiwer==3.0.5
+pandas==2.0.3
+requests==2.32.3
+numpy==1.24.3
+matplotlib==3.7.2
+librosa==0.10.2.post1
 pesq==0.0.4
 datasets==3.2.0
-pystoi
+pystoi==0.4.1
+python-dotenv==0.21.0
